--- a/tasks/Untitled1.ipynb
+++ b/tasks/Untitled1.ipynb
@@ -2,37 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ebf49ddc",
+   "execution_count": 2,
+   "id": "fb5ec113",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a string: tough\n",
-      "01100"
+      "['ux1P5', 'z1aP']\n"
      ]
     }
    ],
    "source": [
-    "text = input(\"Enter a string: \")\n",
-    "binary = [ ]\n",
-    "for x in text:\n",
-    "    if (x == 'a' or x =='e' or x == 'i' or x == 'o' or x == 'u'):\n",
-    "        binary.append(1)\n",
-    "    else:\n",
-    "        binary.append(0)\n",
-    "\n",
-    "for i in binary:\n",
-    "    print(i, end=\"\")\n",
-    "        "
+    "inp =[\"ux1P5\", \"rt0\", \"ft3\", \"z1aP\"]\n",
+    "outp = list(filter(lambda a: 'P' in a, inp ))\n",
+    "print(outp)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ab2f78a",
+   "id": "4d96db30",
    "metadata": {},
    "outputs": [],
    "source": []
